duchain/builders/contextbuilder.cpp
@@ -533,7 +533,8 @@ DeclarationPointer ContextBuilder::findDeclarationImport(DeclarationType declara
 }
 
 DeclarationPointer ContextBuilder::findDeclarationImport(DeclarationType declarationType,
-                                                         SemiReservedIdentifierAst* node)
+                                                         SemiReservedIdentifierAst* node,
+                                                         DeclarationScope declarationScope)
 {
     QualifiedIdentifier id;
     if ( declarationType == ClassDeclarationType || declarationType == FunctionDeclarationType ) {
@@ -541,6 +542,11 @@ DeclarationPointer ContextBuilder::findDeclarationImport(DeclarationType declara
     } else {
         id = identifierForNode(node);
     }
+
+    if (declarationScope == GlobalScope) {
+        id.setExplicitlyGlobal(true);
+    }
+
     return findDeclarationImportHelper(currentContext(), id, declarationType);
 }
 
